--- a/package.json
+++ b/package.json
@@ -7,41 +7,45 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alex-lenk/shop-fashion.git"
+  },
   "keywords": [
-    "keyword"
+    "gb"
   ],
-  "author": "alex lenk",
+  "author": "alexlenk.ru",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alex-lenk/shop-fashion/issues"
+  },
+  "homepage": "https://github.com/alex-lenk/shop-fashion#readme",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-debug": "latest",
-    "gulp-dependents": "^1.2.5",
-    "gulp-imagemin": "^8.0.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-rigger": "latest",
-    "gulp-sass": "^4.1.1",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sass": "^5.1.0",
     "gulp-svgmin": "latest",
     "gulp-svgstore": "latest",
-    "gulp-terser": "latest",
     "gulp-twig": "^1.2.0",
     "gulp-uglify": "^3.0.2",
-    "imagemin-mozjpeg": "^9.0.0",
+    "gulp-uglify-es": "^3.0.0",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-newer": "^1.4.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-pngquant": "latest",
-    "imagemin-svgo": "^10.0.0",
-    "imagemin-zopfli": "latest",
+    "imagemin-mozjpeg": "^10.0.0",
     "sass": "latest",
-    "webpack": "^5.64.0",
-    "webpack-stream": "^7.0.0"
+    "webpack": "^5.66.0",
+    "webpack-stream": "^7.0.0",
+    "terser-webpack-plugin": "^5.3.0"
+  },
+  "dependencies": {
+    "module": "^1.2.5"
   }
 }
