--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-newer": "^1.4.0",
     "gulp-rename": "^2.0.0",
     "gulp-rigger": "latest",
     "gulp-sass": "^5.1.0",
@@ -36,16 +38,15 @@
     "gulp-twig": "^1.2.0",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
-    "gulp-imagemin": "^8.0.0",
-    "gulp-newer": "^1.4.0",
-    "imagemin-optipng": "^8.0.0",
     "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-optipng": "^8.0.0",
     "sass": "latest",
+    "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.66.0",
-    "webpack-stream": "^7.0.0",
-    "terser-webpack-plugin": "^5.3.0"
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.5.2",
     "module": "^1.2.5"
   }
 }
