--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/alex-lenk/shop-fashion#readme",
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.8",
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
@@ -31,18 +31,17 @@
     "gulp-imagemin": "^8.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-rename": "^2.0.0",
-    "gulp-rigger": "latest",
+    "gulp-rigger": "^0.5.8",
     "gulp-sass": "^5.1.0",
-    "gulp-svgmin": "latest",
-    "gulp-svgstore": "latest",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-svgstore": "^9.0.0",
     "gulp-twig": "^1.2.0",
-    "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
-    "sass": "latest",
+    "sass": "^1.49.7",
     "terser-webpack-plugin": "^5.3.0",
-    "webpack": "^5.66.0",
+    "webpack": "^5.70.0",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
